# haikubot-rs-overengineered

./: Cargo.toml
src/: error.rs  main.rs
src/schema/: discord_channel.rs  discord_server.rs  discord_user.rs  haiku.rs  haiku_id_input.rs  mod.rs  person.rs  sample_data.dgraph  schema.dgraph  util.rs
