[package]
name = "haikubot-rs-api"
version = "0.1.0"
authors = ["bumblepie <luke@bumblepie.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
juniper = "0.14"
dgraph = { version = "0.3", default-features = false, features = ["dgraph-1-1"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.6"
